@@ -1,0 +1,9 @@
+#include "../../relacy/relacy_std.hpp"
+
+#include <atomic>
+#include <condition_variable>
+#include <mutex>
+#include <stop_token>
+#include <thread>
+
+int main() { return 0; }
