@@ -1,3 +1,6 @@
+Jan 8, 2026
+ - Added wait/notify* APIs to rl::atomic_flag
+
 Jan 7, 2026
  - Added more support for GCC12, 13, and 14 with libstdc++
  - Added support for C++20's std::atomic wait/notify* APIs.
